# cunyi-ai-app

./: .gitignore  README.md  task-summary_20260416_1402.md
.github/workflows/: android.yml  ios.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  litert_jni_wrapper.cpp
android/app/src/main/java/com/cunyi/ai/: CunyiAIApplication.kt  MainActivity.kt
android/app/src/main/java/com/cunyi/ai/di/: AppModule.kt
android/app/src/main/java/com/cunyi/ai/model/: ChatModels.kt  LiteRTEngine.kt  ModelDownloader.kt
android/app/src/main/java/com/cunyi/ai/ui/: ChatScreen.kt  ChatViewModel.kt
android/app/src/main/java/com/cunyi/ai/ui/theme/: Theme.kt
android/app/src/main/res/values/: strings.xml  themes.xml
ios/: project.yml
ios/CunyiAI/Resources/: Info.plist  LaunchScreen.storyboard
ios/CunyiAI/Sources/: AppDelegate.swift  CunyiAIApp.swift  SceneDelegate.swift
ios/CunyiAI/Sources/Models/: ChatMessage.swift
ios/CunyiAI/Sources/Services/: ModelManager.swift
ios/CunyiAI/Sources/ViewModels/: ChatViewModel.swift
ios/CunyiAI/Sources/Views/: ChatView.swift  ContentView.swift
ios/llama.swift/: Package.swift
ios/llama.swift/Sources/llama/: llama.swift
